Change codecov api to use v2. Old v1 is not working anymore
